# local-skill-orchestrator

./: .gitattributes  .gitignore  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
bootstrap-skill/: SKILL.md
bootstrap-skill/agents/: openai.yaml
docs/: release-checklist.md
docs/architecture/: 2026-07-13-mvp-architecture.md  adr-codex-app-server.md  adr-host-adapter-hard-routing.md  adr-langgraph-checkpoint-recovery.md  adr-remote-capability-sources.md
docs/evaluation/: acceptance-matrix.md  task-routing-2026-07-15.md  task-routing-baseline.md
docs/migration/: codex-native-capability-governance.md
docs/plans/: 2026-07-13-mvp-implementation-plan.md  2026-07-13-product-roadmap.md
docs/research/: 2026-07-13-ai-coding-capability-bootstrapper-research.md  2026-07-13-similar-designs-and-open-source-reuse.md
practice-packs/ai-application/: pack.yaml
practice-packs/backend-api/: pack.yaml
practice-packs/base-engineering/: pack.yaml
practice-packs/cli-tool/: pack.yaml
practice-packs/code-optimization/: pack.yaml
practice-packs/code-relationship-analysis/: pack.yaml
practice-packs/database-backed/: pack.yaml
practice-packs/development-design/: pack.yaml
practice-packs/open-source-library/: pack.yaml
practice-packs/production-release/: pack.yaml
practice-packs/project-continuity-memory/: pack.yaml
practice-packs/security-sensitive/: pack.yaml
practice-packs/web-application/: pack.yaml
src/vibe/: cli.py  (+3 more)
tests/: conftest.py  helpers.py  results-template.md  test_ci_workflow.py  test_cli.py  test_packaging.py  test_test_isolation.py
(+316 files in other folders)
