[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "local-skill-orchestrator"
version = "0.1.0"
description = "Local-first project capability bootstrapper and task context compiler for Codex."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "anyio>=4.8,<5",
  "langgraph>=1.0,<2",
  "langgraph-checkpoint-sqlite>=3,<4",
  "platformdirs>=4.3,<5",
  "pydantic>=2.10,<3",
  "rich>=13.9,<15",
  "sqlalchemy>=2.0,<3",
  "typer>=0.15,<1",
]

[project.scripts]
vibe = "vibe.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vibe"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

